<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".NoticiasActivity">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/headerBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerBackground" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNoticias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardPublicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBackground"
        tools:listitem="@layout/item_noticia" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPublicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/background_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_publicar"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_titulo"
                android:inputType="textCapSentences"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etContenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contenido"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnPublicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_publicar"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>